# string-search

./: .gitignore  string-search.cabal
bench/: Main.hs
src/: Main.hs
src/Search/Naive/: ByteString.hs  String.hs  Text.hs
test/: Main.hs
