
name:                string-search
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable bench
    main-is:            Main.hs
    hs-source-dirs:     src
    default-language:   Haskell2010

    build-depends:      base            >=4.7   && <4.8
                    ,   criterion       >=1.0   && <1.1
