
name:                string-search
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:     src
    default-language:   Haskell2010

    exposed-modules:    Search.Naive.String
                    ,   Search.Naive.ByteString

    build-depends:      base            >=4.7   && <4.8
                    ,   bytestring      >=0.10  && <0.11

executable bench
    main-is:            Main.hs
    hs-source-dirs:     bench
    default-language:   Haskell2010

    build-depends:      base            >=4.7   && <4.8
                    ,   criterion       >=1.0   && <1.1
                    ,   bytestring      >=0.10  && <0.11

                    ,   string-search

executable test
    main-is:            Main.hs
    hs-source-dirs:     test
    default-language:   Haskell2010

    build-depends:      base            >=4.7   && <4.8
                    ,   bytestring      >=0.10  && <0.11

                    ,   string-search
